src/routes/index/Index.module.css
.gameListContainer {
  overflow-y: auto;
}

.logo {
  display: block;
  max-width: 1080px;
  max-width: 100vw;
  max-height: 483px;
  width: 100%;
  height: auto;
}

.NewsLogoSquare {
  display: block;
  max-width: 1080px;
  max-width: 100vw;
  max-height: 483px;
  width: 100%;
  height: auto;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 10px;
}

.NewsLogoRectangle {
  display: block;
  max-width: 450px;
  max-width: 100vw;
  max-height: 450px;
  width: auto;
  height: auto;
  margin: auto;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 10px;
}

.grid {
  display: grid;
  gap: 25px;
  margin: 0 auto;
  padding: 0 1em;
  max-width: 100%;
}

.gameListContainer {
  order: 1;
}

.createGameContainer {
  order: 2;
}

.newsContainer {
  margin: 1.5em auto;
  display: flex;
  flex-direction: column;
  gap: 1em;
  max-width: 768px;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 10px;
  order: 3;
}


@media (min-width: 1350px) {
  .grid {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 25px;
    margin: 0 auto;
    padding: 0 1em;
    max-width: 100%;
    overflow-x: hidden;
    width: 100vw;
  }
}

@media (min-width: 769px) and (max-width: 1349px) {
  .grid {
    grid-template-columns: 1fr 1fr;
    gap: 25px;
    margin: 0 auto;
    padding: 0 1em;
    max-width: 100%;
    overflow-x: hidden;
    grid-template-areas:
      "gameList createGame"
      "gameList news";
  }

  .gameListContainer {
    grid-area: gameList;
  }

  .createGameContainer {
    grid-area: createGame;
  }

  .newsContainer {
    grid-area: news;
    max-width: 100%;
    margin: 0;
  }
}

.headlines {
  text-align: center;
}

.headlinesParagraphs {
  text-align: center;
  font-size: 0.9em;
}

.disclaimer {
  font-size: 0.8em;
}

@media only screen and (max-width: 768px) and (orientation: portrait) {
  .grid {
    grid-template-columns: 1fr;
    gap: 25px;
    margin: 0 auto;
    max-width: 100%;
    overflow-x: hidden;
    width: 100vw;
    line-height: normal;
  }

  .gameListContainer {
    overflow-x: hidden;
    width: 100%;
    order: 1;
  }

  .createGameContainer {
    overflow-x: hidden;
    width: 100%;
    order: 2;
  }
  
  .newsContainer {
    overflow-x: hidden;
    width: 100%;
    order: 3;
  }

  .logo {
    max-width: 100vw;
  }
  
  .NewsLogoSquare {
    max-width: 100vw;
    width: 100%;
  }
  
  .NewsLogoRectangle {
    max-width: 100vw;
    width: 100%;
  }
}

